syntax = "proto3";
package pb;

message WishlistItem {
  string id = 1;
  string productId = 2;
  string userId = 3;
}

message CreateWishlistItemRequest {
  string productId = 1;
  string userId = 2;
}

message CreateWishlistItemResponse {
  string id = 1;
}

message FindWishlistItemWithPaginationRequest {
  string userId = 1;
  repeated string productIds = 2;
  int32 page = 3;
  int32 limit = 4;
}

 message FindWishlistItemWithPaginationResponse{
   repeated WishlistItem items = 1;
   int32 page = 2;
   int32 limit = 3;
 }

 message DeleteWishlistItemByIdRequest {
  string id = 1;
 }

 message DeleteWishlistItemByIdResponse {
  string userId = 1;
 }